--- a/prak_3_css.html
+++ b/prak_3_css.html
@@ -9,22 +9,22 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ffffff;
+            background-color: #e68505;
         }
         header {
-            background-color: #09bfe8;
-            color: #0b0b0a;
+            background-color: #090909;
+            color: #f07408;
             padding: 20px;
             text-align: center;
         }
         nav {
-            background-color: #cf1313;
-            color: #fff;
+            background-color: #100f0f;
+            color: #c12a2a;
             padding: 10px;
             text-align: center;
         }
         nav a {
-            color: #fff;
+            color: #e66a0b;
             text-decoration: none;
             margin: 0 10px;
         }
@@ -32,19 +32,25 @@
             padding: 20px;
         }
         footer {
-            background-color: #333;
-            color: #fff;
+            background-color: #080807;
+            color: #e6750b;
             padding: 10px;
             text-align: center;
             position: fixed;
             bottom: 0;
             width: 100%;
         }
+        div.zeus{
+            margin-left: 400px;
+        }
     </style>
 </head>
 <body>
+   
+    
     <header>
-        <h1>Header Halaman Web</h1>
+        <h1>REKINSA 88</h1>
+        <h1>selamat datang di permainan kami!</h1>
     </header>
     <nav>
         <a href="#">Beranda</a>
@@ -52,11 +58,14 @@
         <a href="#">Kontak</a>
     </nav>
     <main>
-        <h2>Selamat datang di halaman web kami!</h2>
-        <p>Ini adalah contoh halaman web sederhana.</p>
+        <div class="zeus">
+            <img src="th.jpeg" width="641" height="360">
+        </div>
+        <h2></h2>
+        <p></p>
     </main>
     <footer>
-        <p>Hak Cipta © 2024 Contoh Perusahaan.</p>
+        <p>CURVA BOYS REKINSA</p>
     </footer>
 </body>
 </html>
